--- a/index.html
+++ b/index.html
@@ -2,113 +2,59 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <title>HTML Cheat sheet</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <!-- this is how you write a comment whach is ignored by the compiler or what so ever  -->
   <body>
-    <!-- this is how headings are made-->
-    <h1>Heading one</h1>
-    <h2>heading two</h2>
-    <h3>heading three</h3>
-    <h4>heading four</h4>
-    <h5>heading five</h5>
-    <h6>heading six and so on</h6>
+    <header>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <h1>My Portfolio</h1>
+    </header>
 
-    <!--paragraph-->
-    <P>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eaque 
-      necessitatibus, hic laudantium dignissimos eligendi reprehenderit aut 
-      maiores maxime vitae, dolorum corporis sunt? Asperiores aut tempore 
-      assumenda eos corrupti reiciendis.
-    </P>
-    <!--List-->
-    <ul>
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
-      <li>item 4</li>
-      <li>item 5</li>
-      <li>item 6</li>
-    </ul>
-     <ol>
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
-      <li>item 4</li>
-      <li>item 5</li>
-      <li>item 6</li>
-    </ol>
-    <!--table-->
-    <table>
-      <thead>
-        <tr>
-          <td>Name</td>
-          <td>Email</td>
-          <td>Age</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Nikhil</td>
-          <td>Nikhil@something.com</td>
-          <td>15</td>
-        </tr>
-        <tr>
-          <td>Rahul</td>
-          <td>rahul@something.com</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>Ram</td>
-          <td>ram@something.com</td>
-          <td>18</td>
-        </tr>
-      </tbody>
-    </table>
-      <hr><!--to make a horisontal line-->
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        Hi! I'm Nikhil, a passionate web developer. I love building beautiful and functional websites.
+      </p>
+    </section>
 
-    <!--Forms-->
-    <form action="process.php" method="post">
-      <label>First Name</label>
-      <input type="text" name="first-name"
-      placeholder="Enter Your First Name">
-    </form>
-    <br>
-    <form action="process.php" method="post">
-      <label>Last Name</label>
-      <input type="text" name="last-name">
-    </form>
-    <br>
-    <form action="process.php" method="post">
-      <label>Email</label>
-      <input type="email" name="Email">
-    </form>
-    <br>
-    <form action="process.php" method="post">
-      <label>Message</label>
-      <textarea name="Message"></textarea>      
-    </form>
-    <br>
-    <form action="process.php" method="post">
-      <label>Gender</label>
-      <select name="Gender" id="">
-        <option value="Male">Male</option>
-        <option value="Female">Female</option>
-        <option value="Other">Other</option>
-      </select>
-    </form>
-    <br>
-    <form action="process.php" method="post">
-      <label>Age</label>
-      <input type="number" name="Age" value="30">
-    </form>
-    <br>
-    <form action="process.php" method="post">
-      <label>Birthday</label>
-      <input type="date" name="Birthday">
-    </form>
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul class="projects-list">
+        <li>
+          <h3>Project One</h3>
+          <p>A simple HTML/CSS project to showcase my skills.</p>
+        </li>
+        <li>
+          <h3>Project Two</h3>
+          <p>A responsive website built with modern CSS techniques.</p>
+        </li>
+      </ul>
+    </section>
 
+    <section id="contact">
+      <h2>Contact</h2>
+      <form class="contact-form">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit">Send</button>
+      </form>
+    </section>
     
-    <div style="margin-top:500px"></div>
+
   </body>
 </html>
